--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -7,7 +7,7 @@
     <meta property="og:image" content="https://i.ibb.co/rF63Jk8/ARS-official.png" itemprop="thumbnailUrl">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{file_name}} | ARS OFFICIAL</title>
+    <title>%s | ARS OFFICIAL</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>    
@@ -81,7 +81,7 @@
                         <a href="https://telegram.me/sk7252k" type="button" class="btn btn-outline-secondary w-100 mt-1">SK</a>
 	        <div class="offcanvas-body">    
 		     <div class="wow animate__animated animate__fadeInLeft ">
-                        <h2 class="font-semibold" style="text-shadow: 1px 2px 8px black;">Movies Group</h2>
+                        <h3 class="font-semibold" style="text-shadow: 1px 2px 8px black;">Movies Group</h3>
 		    </div>
                         <a href="https://telegram.me/iPapcornPrimeGroup" type="button" class="btn btn-outline-secondary w-100 mt-1">Group 1</a>
                         <a href="https://telegram.me/MovieRockersGroup" type="button" class="btn btn-outline-secondary w-100 mt-1">Group 2</a>
@@ -112,25 +112,6 @@
                 </div>
 
                 <!-- web title -->
-            <!-- ./Navba
-
-        <!-- External video player section -->
-            <div class="justify-content-center align-items-center w-100 d-flex">
-                    <div class="row d-flex w-100 justify-content-center align-items-center">
-        
-                        <div class="col-lg-7 col-12 d-flex justify-content-start align-items-center ">
-                            <p class="h4 px-2 mt-4 bg-clip-text text-transparent bg-gradient-to-r from-yellow-200 to-orange-600 font-bold mb-2">Play with...</p>
-                        </div>
-                        <div class="col-lg-6 col-10 d-flex justify-center items-center flex-wrap pb-3 gaNavba<!-- web title -->
-                <div class="container-fluid">
-                    <a class="navbar-brand  text-light fw-bold " href="https://telegram.me/real_MoviesAdda2">
-                        <span class="bg-clip-text sm:text-[25px] text-[22px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500">
-                            Movies Adda
-                          </span>
-                    </a>
-                  </div>
-               </div>
-            </nav>
             <!-- ./Navbar -->
     </header>
     <!-- ./Header -->
@@ -153,7 +134,16 @@
                     <source src="{{file_url}}" type="video/mp4">
                 </video>
             </div>
-	</div>ow animate__animated animate__fadeIn">
+        </div>
+
+        <!-- External video player section -->
+            <div class="justify-content-center align-items-center w-100 d-flex">
+                    <div class="row d-flex w-100 justify-content-center align-items-center">
+
+                        <div class="col-lg-7 col-12 d-flex justify-content-start align-items-center ">
+                            <p class="h4 px-2 mt-4 bg-clip-text text-transparent bg-gradient-to-r from-yellow-200 to-orange-600 font-bold mb-2">Play with...</p>
+                        </div>
+                        <div class="col-lg-6 col-10 d-flex justify-center items-center flex-wrap pb-3 gap-2 wow animate__animated animate__fadeIn">
                             <div onclick="vlc_player()" class="card card-body col-lg-3  col-5 bg-dark text-secondary text-center justify-content-center align-items-center hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-300 wow animate__animated animate__fadeInLeft">
                                 <svg class="wow animate__animated animate__shakeX  animate__delay-1s" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 64 64"><linearGradient id="d2lfkA6lemjIH1JdWslHIa_74320_gr1" x1="32" x2="32" y1="16.021" y2="39.25" gradientUnits="userSpaceOnUse" spreadMethod="reflect"><stop offset=".437" stop-color="#6dc7ff"></stop><stop offset="1" stop-color="#e6abff"></stop></linearGradient><path fill="url(#d2lfkA6lemjIH1JdWslHIa_74320_gr1)" d="M32,31.25c2.891,0,5.255-0.323,6.939-0.712l2.409,7.664C37.765,39.116,33.881,39.25,32,39.25 c-1.88,0-5.765-0.134-9.347-1.049l2.408-7.663C26.745,30.927,29.11,31.25,32,31.25z M32.5,24.25c1.554,0,2.999-0.141,4.343-0.38 l-2.429-7.729c-0.587,0.063-1.211,0.109-1.914,0.109c-1.1,0-2.062-0.092-2.876-0.229l-2.404,7.651 C28.816,24.034,30.574,24.25,32.5,24.25z"></path><linearGradient id="d2lfkA6lemjIH1JdWslHIb_74320_gr2" x1="32.105" x2="32.105" y1="7.415" y2="56" gradientUnits="userSpaceOnUse" spreadMethod="reflect"><stop offset="0" stop-color="#1a6dff"></stop><stop offset="1" stop-color="#c822ff"></stop></linearGradient><path fill="url(#d2lfkA6lemjIH1JdWslHIb_74320_gr2)" d="M56.903,50.041l-2.216-10.779c-0.513-2.265-2.52-3.847-4.881-3.847H45.09l-8.059-24.451 c-0.7-2.123-2.726-3.549-5.04-3.549c-2.314,0-4.339,1.426-5.039,3.549l-8.058,24.451h-4.491c-2.362,0-4.369,1.582-4.885,3.866 L7.31,50.021c-0.327,1.442,0.019,2.937,0.947,4.099C9.212,55.314,10.645,56,12.19,56h39.828c1.545,0,2.979-0.685,3.934-1.88 C56.88,52.958,57.226,51.464,56.903,50.041z M19.096,41.19l9.755-29.601c0.429-1.301,1.69-2.175,3.14-2.175s2.711,0.874,3.14,2.175 l9.774,29.655c0.201,0.72,0.088,1.331-0.357,1.923c-1.509,2.001-6.32,3.246-12.557,3.247c-0.004,0-0.007,0-0.011,0 c-6.223,0-11.017-1.229-12.511-3.208C19,42.586,18.886,41.933,19.096,41.19z M54.39,52.872C53.816,53.589,52.952,54,52.019,54H12.19 c-0.934,0-1.798-0.411-2.371-1.128C9.39,52.334,9.181,51.677,9.202,51H17v-2H9.561l0.411-2H14v-2h-3.616l1.089-5.297 c0.3-1.326,1.532-2.288,2.93-2.288h3.832l-1.05,3.188c-0.392,1.376-0.154,2.693,0.689,3.81c1.921,2.544,7.062,4.003,14.106,4.003 c0.003,0,0.008,0,0.011,0c7.06-0.002,12.219-1.476,14.153-4.044c0.823-1.093,1.058-2.37,0.678-3.694 c-0.003-0.013-0.007-0.025-0.011-0.038l-1.062-3.224h4.058c1.397,0,2.63,0.962,2.926,2.269L53.825,45H50v2h4.236l0.411,2H47v2h8.008 C55.029,51.671,54.821,52.332,54.39,52.872z"></path></svg>
                                 VLC Player
@@ -366,4 +356,4 @@
 
     <!--🥰  Thank you for giving me credit @LazyDeveloperr  🥰 -->
 </body>
-	</html>
+	    </html>
