--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -79,6 +79,10 @@
                         <a href="https://telegram.me/Rutuja78" type="button" class="btn btn-outline-secondary w-100 mt-1 wow animate__animated animate__fadeIn ">Rutuja</a>
                         <a href="https://telegram.me/AkshayChand08" type="button" class="btn btn-outline-secondary w-100 mt-1">Akshay Chand</a>
                         <a href="https://telegram.me/sk7252k" type="button" class="btn btn-outline-secondary w-100 mt-1">SK</a>
+	        <div class="offcanvas-body">    
+		     <div class="wow animate__animated animate__fadeInLeft ">
+                        <h2 class="font-semibold" style="text-shadow: 1px 2px 8px black;">Movies Group</h2>
+		    </div>
                         <a href="https://telegram.me/iPapcornPrimeGroup" type="button" class="btn btn-outline-secondary w-100 mt-1">Group 1</a>
                         <a href="https://telegram.me/MovieRockersGroup" type="button" class="btn btn-outline-secondary w-100 mt-1">Group 2</a>
                         <a href="https://telegram.me/iPapdiscussion" type="button" class="btn btn-outline-secondary w-100 mt-1">Discussion (Help Group)</a>
@@ -105,7 +109,13 @@
                     <!-- footer of sidebar -->
                     <!-- <p>Try scrolling the rest of the page to see this option in action.</p> -->
                 </div>
-		</div>
+                </div>
+
+                <!-- web title -->
+            <!-- ./Navbar -->
+    </header>
+    <!-- ./Header -->
+
     <div class="bg-black  text-light"  >
         <!-- file Name -> to be displayed here  -->
         <div class="justify-content-center align-items-center w-100 d-flex">
