--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -20,15 +20,31 @@
     <link rel="stylesheet" href="https://cdn.plyr.io/3.6.9/plyr.css" />
     <script src="https://cdn.tailwindcss.com"></script>
 
-<head>
-    <meta charset="UTF-8">
-    <!--<link rel="icon" href=" Your Fevicol link "> -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>Watch {{file_name}} - YOUR CHANNEL NAME </title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.7.8/plyr.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-<style>
+  <!-- web title -->
+                <div class="container-fluid">
+                    <a class="navbar-brand  text-light fw-bold " href="https://telegram.me/real_MoviesAdda2">
+                        <span class="bg-clip-text sm:text-[25px] text-[22px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500">
+                            Lazy PLayer
+                          </span>
+                    </a>
+                  </div>
+               </div>
+            </nav>
+            <!-- ./Navbar -->
+    </header>
+    <!-- ./Header -->
+
+    <div class="bg-black  text-light"  >
+        <!-- file Name -> to be displayed here  -->
+        <div class="justify-content-center align-items-center w-100 d-flex">
+            <div id="file-name" class="tex-center text-lg max:w-74  p-2 flex-wrap text-center justify-center items-center">
+                <p class="fw-bold"> 
+                    <span id="myDiv" class="h6 flex-wrap text-center justify-center items-center card-title wow animate__animated animate__fadeInRight" >
+                        %s
+                    </span>
+                </p>
+            </div>
+			    </div>
     body {
         font-family: sans-serif;
         font-size: 16px;
