--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -227,16 +227,22 @@ YOUR ADS
     -->
     <div class="playercontainerbox"> 
         <div id="player-container">
-            <video id="player" playsinline controls>
-                <source src={{ src }} type="video/mp4">
-            </video>
+            <video
+                id="myVideo"
+                controls=""
+                src="{{ src }}"
+                width="100%"
+                height="auto"
+              >
+                Your browser does not support the video tag.
+	    </video>
         </div>
     </div>
     <div class="containerbox"> 
      <div id="info-box">
      <h4>Fɪʟᴇ ɴᴀᴍᴇ : {{ filename }}</h4> 
-	  
      <h4>Fɪʟᴇ ꜱɪᴢᴇ : {{file_size}}</h4>
+	Shared by : ******* (Privacy Enabled)     
 	</div>
         <div style="margin-bottom: 5px; margin-top: 10px">Stream Options :</div>
         <div id="button-container1">
@@ -272,7 +278,7 @@ YOUR ADS
         <script src="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.7.8/plyr.js"></script>
         <script>
             const player = new Plyr('#player', {
-                controls: ['play', 'progress', 'rewind', 'fast-forward', 'current-time', 'fullscreen', 'settings']
+                controls: ['rewind', 'audio', 'play', 'fast-forward', 'progress', 'current-time', 'duration', 'captions', 'settings', 'pip', 'airplay', 'fullscreen']
             });
         </script>
         </div>    
