--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -252,7 +252,9 @@ YOUR ADS
     <div class="containerbox"> 
      <div id="info-box">
      <h4>Fɪʟᴇ ɴᴀᴍᴇ : {{ filename }}</h4> 
+	     
      <h4>Fɪʟᴇ ꜱɪᴢᴇ : {{file_size}}</h4>
+	     
      <h4>Shared by : ******* (Privacy Enabled)</h4>     
 	</div>
         <div style="margin-bottom: 5px; margin-top: 10px">Stream Options :</div>
@@ -280,7 +282,7 @@ YOUR ADS
 	    </div>
 	    <center>
     <h2>
-        <a href="https://telegram.me/BotszList">
+        <a href="https://telegram.me/arsOfficial10">
             <img src="https://graph.org/file/b57cdba982191a25db535.jpg" alt="BotszList" width="150" height="75">
         </a>
     </h2>
