--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="https://i.ibb.co/XzCyycV/20230807-211612.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>Watch {{file_name}} / ARS official</title>
+    <title>{{file_name}} / ARS official</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.7.8/plyr.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <style>
@@ -413,7 +413,7 @@ YOUR ADS
         <p style="font-size: 15px; color:#7b89a3;padding-top: 30px ;margin:0px 10px; border-top: 1px solid #c2cee3;">
       This website only provide service that help you convert your Telegram File to Online Streaming.
       You can report the file/video that contains a problem like copyright, 18+, violence, et. Report <a href="https://telegram.dog/iPapdiscussion" style="color: darkorange"><b>Here</b></a>
-      <p style="text-align:center">&copy; ©️ Copyright 2023 ARS official </p>
+      <p style="text-align:center">&copy; Copyright 2023 ARS official </p>
       <!--
       YOUR ADS 
       -->
