--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -239,12 +239,12 @@ YOUR ADS
 	    </video>
         </div>
     </div>
-	  <p style="font-size: 10px; color:#7b89a3;">If the screen turns white then your browser is not supporting the video, then you can play it using the Application</p>
+	  <p style="font-size: 10px; color:#f20a0a;">If the screen turns white then your browser is not supporting the video, then you can play it using the Application</p>
     <div class="containerbox"> 
      <div id="info-box">
-     <p style="font-size: 13px; color:#7b89a3;">Fɪʟᴇ ɴᴀᴍᴇ : {{ filename }}</p>
-     <p style="font-size: 13px; color:#7b89a3;">Fɪʟᴇ ꜱɪᴢᴇ : {{file_size}}</p>
-     <p style="font-size: 13px; color:#7b89a3;">Shares by : ******* (Privacy Enabled)</p>     
+     <p style="font-size: 11px; color:#0cf77e;">Fɪʟᴇ ɴᴀᴍᴇ : {{ filename }}</p>
+     <p style="font-size: 11px; color:#0cf77e;">Fɪʟᴇ ꜱɪᴢᴇ : {{file_size}}</p>
+     <p style="font-size: 11px; color:#0cf77e;">Shares by : ******* (Privacy Enabled)</p>     
 	</div>
         <div style="margin-bottom: 5px; margin-top: 10px">Stream Options :</div>
         <div id="button-container1">
