--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -152,7 +152,7 @@
     }
     
     #info-box {
-        border: 1px solid #8A8A8A;
+        border: 1px solid #01060a;
         border-radius: 10px;
         padding: 5px;
         width: auto;
