--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -218,10 +218,10 @@
 <body>   
 <div id="banner">
     <div class="left-content">
-        <span class="black-text">Online Streaming</span>
+        <span class="black-text">𝐈 𝐃𝐢𝐬𝐤</span>
     </div>
 </div>
-<div style="margin-bottom: 5px; margin-top: 5px"></div>
+<div style="margin-bottom: 7px; margin-top: 7px"></div>
 <div class="site-content">
     <!--
 YOUR ADS
